--- a/app/src/main/res/layout/activity_ver_info_evento.xml
+++ b/app/src/main/res/layout/activity_ver_info_evento.xml
@@ -63,6 +63,7 @@
                     android:layout_marginTop="5dp"
                     android:paddingBottom="5dp"
                     android:textSize="16sp"
+                    android:id="@+id/descripcion"
                     android:textColor="@color/background_material_dark"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
@@ -275,7 +276,7 @@
                 android:id="@+id/textEvento"
                 android:textSize="24sp"
                 android:textStyle="normal|bold"
-                android:textColor="#000"
+                android:textColor="#fff"
                 android:textAlignment="center"
                 android:layout_marginBottom="45dp"
                 android:layout_above="@+id/layoutDescripcion"
