--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,5 +32,11 @@
         android:text="Buscar"
         android:onClick="goBuscar"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crear evento"
+            android:onClick="goCrearEvento"/>
+
     </LinearLayout>
 </ScrollView>
