Login y encriptación de passwords

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,5 +38,12 @@
             android:text="Crear evento"
             android:onClick="goCrearEvento"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:onClick="goLogin"/>
+
+
     </LinearLayout>
 </ScrollView>
