--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.pes12.pickanevent.view.MainActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <Button
             android:layout_width="wrap_content"
@@ -27,10 +28,10 @@
             android:onClick="goVerInfoEvento"/>
 
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Buscar"
-        android:onClick="goBuscar"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buscar"
+            android:onClick="goBuscar"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -43,6 +44,14 @@
             android:layout_height="wrap_content"
             android:text="Login"
             android:onClick="goLogin"/>
+
+        <Button
+            android:text="VER OTRO USUARIO"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_weight="0.14"
+            android:onClick="goInfoOtroUsuario" />
 
 
     </LinearLayout>
