--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,12 @@
             android:text="Login"
             android:onClick="goLogin"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Editar evento"
+            android:onClick="goEditarEvento"/>
+
 
     </LinearLayout>
 </ScrollView>
