--- a/app/src/main/res/layout/activity_info_otro_usuario.xml
+++ b/app/src/main/res/layout/activity_info_otro_usuario.xml
@@ -34,7 +34,7 @@
                 android:adjustViewBounds="true"
                 android:cropToPadding="false" />
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -53,7 +53,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="7dp" />
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -71,7 +71,7 @@
                 android:layout_below="@+id/textNombreUsuario"
                 android:layout_alignParentStart="true" />
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
