Cambio del adapter para las listview y actualizacion de la busqueda

--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -15,8 +15,8 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
         ></include>
+
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -44,10 +44,22 @@
                 android:id="@+id/texto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <ListView
+                android:id="@+id/lvUsers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
             <TextView
                 android:id="@+id/texto2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <ListView
+                android:id="@+id/lvGrupos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
