ver info grupo con miniatura eventos

--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -5,8 +5,8 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<ImageView android:id="@+id/icon" android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+<ImageView android:id="@+id/icon" android:layout_width="50dp"
+    android:layout_height="50dp" />
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -15,10 +15,15 @@ android:layout_height="match_parent">
     >
 
     <TextView android:id="@+id/text1" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:text="primera linea"/>
+        android:layout_height="wrap_content" android:text="primera linea"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp" />
 
     <TextView android:id="@+id/text2" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:text="segunda linea"/>
+        android:layout_height="wrap_content" android:text="segunda linea"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
 </LinearLayout>
 
