--- a/app/src/main/res/layout/activity_editar_evento.xml
+++ b/app/src/main/res/layout/activity_editar_evento.xml
@@ -222,7 +222,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick=""
+                    android:onClick="mostrarCalendar"
                     android:src="@android:drawable/ic_menu_today"
                     android:id="@+id/imageButtonCalendar"
                     android:layout_toEndOf="@+id/editorFecha" />
@@ -237,9 +237,8 @@
                 android:layout_alignParentBottom="true"
                 android:background="#FFF"
                 android:layout_alignStart="@+id/marcoContenido"
-                android:layout_below="@+id/relative2"
+                android:layout_below="@+id/marcoContenido"
                 android:layout_alignEnd="@+id/marcoContenido"
-                tools:visibility="invisible"
                 />
 
             <Button
