--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,12 @@
             android:id="@+id/button2"
             android:onClick="goOtroUsuario" />
 
+        <Button
+            android:text="Editar evento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goEditarEvento" />
+
 
     </LinearLayout>
 </ScrollView>
