--- a/app/src/main/res/layout/lista_grupos.xml
+++ b/app/src/main/res/layout/lista_grupos.xml
@@ -13,7 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
