--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -40,7 +40,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/imagenEvento"
                 android:layout_alignParentStart="true"
-                android:layout_height="620dp" />
+                android:layout_height="670dp" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -206,7 +206,7 @@
                 <EditText
                     android:layout_width="250dp"
                     android:inputType="textPersonName"
-                    android:hint="dd/mm/yyyy hh:mm"
+                    android:hint="Primer día"
                     android:ems="10"
                     android:fontFamily="sans-serif"
                     android:paddingLeft="5dp"
@@ -231,16 +231,41 @@
 
             </RelativeLayout>
 
-            <CalendarView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/calendarView"
-                android:layout_alignParentBottom="true"
-                android:background="#FFF"
-                android:layout_alignStart="@+id/marcoContenido"
-                android:layout_below="@+id/buttonAcceptar"
-                android:layout_alignEnd="@+id/marcoContenido"
-            />
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical"
+                android:layout_below="@+id/relative2"
+                android:layout_marginTop="10dp"
+                android:id="@+id/relative3">
+
+                <EditText
+                    android:layout_width="250dp"
+                    android:inputType="textPersonName"
+                    android:hint="Último día (opcional)"
+                    android:ems="10"
+                    android:fontFamily="sans-serif"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:textSize="18sp"
+                    android:textColorHint="#8a939d"
+                    android:id="@+id/editorFechaFinal"
+                    android:layout_height="46dp"
+                    android:background="#eceff1"
+                    android:textStyle="normal"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="mostrarCalendarFinal"
+                    android:src="@android:drawable/ic_menu_today"
+                    android:id="@+id/imageButtonCalendarFinal"
+                    android:layout_toEndOf="@+id/editorFechaFinal" />
+
+
+            </RelativeLayout>
 
             <Button
                 android:text="Crear Evento"
@@ -251,10 +276,29 @@
                 android:layout_height="30dp"
                 android:radius="20dip"
                 android:onClick="crearEvento"
-                android:layout_alignBottom="@+id/marcoContenido"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="15dp" />
+                android:layout_below="@+id/relative3"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp" />
 
+            <CalendarView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/calendarView"
+                android:layout_alignParentBottom="true"
+                android:background="#FFF"
+                android:layout_alignStart="@+id/marcoContenido"
+                android:layout_below="@+id/marcoContenido"
+                android:layout_alignEnd="@+id/marcoContenido" />
+
+            <CalendarView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/calendarViewFinal"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/marcoContenido"
+                android:layout_below="@+id/marcoContenido"
+                android:layout_alignEnd="@+id/marcoContenido" />
 
         </RelativeLayout>
     </ScrollView>
