--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -36,7 +36,7 @@
                 android:text="Seguir!"
                 android:layout_width="wrap_content"
                 android:id="@+id/seguir"
-                android:background="#e3ee34"
+                android:background="@drawable/boton_amarillo_custom"
                 android:layout_height="26dp"
                 android:layout_above="@+id/descr"
                 android:layout_alignEnd="@+id/descr"
@@ -149,12 +149,11 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
                 android:id="@+id/event"
                 android:layout_below="@+id/EventosTitulo"
-                android:layout_alignStart="@+id/EventosTitulo" />
+                android:layout_alignStart="@+id/EventosTitulo"
+                android:layout_marginRight="15dp"
+                android:layout_height="105dp" />
 
 
         </RelativeLayout>
