--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -6,7 +6,8 @@ android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 <ImageView android:id="@+id/icon" android:layout_width="50dp"
-    android:layout_height="50dp" />
+    android:layout_height="50dp"
+    android:layout_marginLeft="2dp" />
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -16,18 +17,13 @@ android:layout_height="match_parent">
 
     <TextView android:id="@+id/text1" android:layout_width="match_parent"
         android:layout_height="wrap_content" android:text="primera linea"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView android:id="@+id/text2" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:text="segunda linea"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
 
         <Button
             android:text="Button"
@@ -37,12 +33,19 @@ android:layout_height="match_parent">
             android:bottomLeftRadius="10dp"
             android:topLeftRadius="10dp"
             android:topRightRadius="10dp"
-            android:layout_width="80dp"
             android:layout_weight="1"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="5dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:layout_width="70dp" />
+
+        <TextView android:id="@+id/text2" android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:text="segunda linea"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="75dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </LinearLayout>
